--- a/index.html
+++ b/index.html
@@ -1,120 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>IGMRRF</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IGMRRF</title>
+  </head>
 
-    <body>
-        <table cellspacing="5 ">
+  <body>
+    <table cellspacing="5 ">
+      <tr>
+        <td>
+          <img src="profile.jpg" alt="Profile Image" />
+        </td>
+        <td>
+          <h1>Igbiriki Francis Richard</h1>
+          <p>
+            <em
+              >Founder and CTO of
+              <strong
+                ><a href="https://igmrrf.com">The Lazy Legions</a></strong
+              ></em
+            >
+          </p>
+          <p>
+            I am a programmer, enterpreneur and Software Developer(Web, Android,
+            iOS and Desktop)
+          </p>
+        </td>
+      </tr>
+    </table>
+
+    <hr />
+    <h3>Books and Teaching</h3>
+    <ul>
+      <li>The Complete Programmer Course</li>
+      <li>Introduction to Web Development</li>
+      <li>The Subtle iOS Developer</li>
+      <li>Why Kotlin is the Android Language</li>
+    </ul>
+    <hr />
+    <h3>Work Experience</h3>
+
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2010-2013</td>
+          <td>Lead Developer at Tempo App</td>
+        </tr>
+
+        <tr>
+          <td>2010</td>
+          <td>
+            Researcher at The Institute of Cognitive Neurosciences
+          </td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
+    </table>
+    <hr />
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <td>
+          <table cellspacing="10">
             <tr>
-                <td>
-                    <img src="profile.jpg" alt="Profile Image" />
-                </td>
-                <td>
-                    <h1>Igbiriki Francis Richard</h1>
-                    <p>
-                        <em
-                            >Founder and CTO of
-                            <strong
-                                ><a href="https://igmrrf.com"
-                                    >The Lazy Legions</a
-                                ></strong
-                            ></em
-                        >
-                    </p>
-                    <p>
-                        I am a programmer, enterpreneur and Software
-                        Developer(Web, Android, iOS and Desktop)
-                    </p>
-                </td>
+              <td>iOS Development</td>
+              <td>*****</td>
             </tr>
-        </table>
-
-        <hr />
-        <h3>Books and Teaching</h3>
-        <ul>
-            <li>The Complete Programmer Course</li>
-            <li>Introduction to Web Development</li>
-            <li>The Subtle iOS Developer</li>
-            <li>Why Kotlin is the Android Language</li>
-        </ul>
-        <hr />
-        <h3>Work Experience</h3>
-
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Dates</th>
-                    <th>Work</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>2010-2013</td>
-                    <td>Lead Developer at Tempo App</td>
-                </tr>
-
-                <tr>
-                    <td>2010</td>
-                    <td>
-                        Researcher at The Institute of Cognitive Neurosciences
-                    </td>
-                </tr>
-            </tbody>
-            <tfoot></tfoot>
-        </table>
-        <hr />
-        <h3>Skills</h3>
-        <table>
             <tr>
-                <td>
-                    <table cellspacing="10">
-                        <tr>
-                            <td>iOS Development</td>
-                            <td>*****</td>
-                        </tr>
-                        <tr>
-                            <td>Web Development</td>
-                            <td>****</td>
-                        </tr>
-
-                        <tr>
-                            <td>Photography</td>
-                            <td>**</td>
-                        </tr>
-                        <tr>
-                            <td>Programmings</td>
-                            <td>*</td>
-                        </tr>
-                    </table>
-                </td>
-                <td>
-                    <table cellspacing="10">
-                        <tr>
-                            <td>iOS Development</td>
-                            <td>*****</td>
-                        </tr>
-                        <tr>
-                            <td>Web Development</td>
-                            <td>****</td>
-                        </tr>
-
-                        <tr>
-                            <td>Photography</td>
-                            <td>**</td>
-                        </tr>
-                        <tr>
-                            <td>Programmings</td>
-                            <td>*</td>
-                        </tr>
-                    </table>
-                </td>
+              <td>Web Development</td>
+              <td>****</td>
             </tr>
-        </table>
-        <hr />
-        <a href="hobbies.html">My Hobbies</a>
-        <a href="contact.html">Contact Me</a>
-    </body>
+
+            <tr>
+              <td>Photography</td>
+              <td>**</td>
+            </tr>
+            <tr>
+              <td>Programmings</td>
+              <td>*</td>
+            </tr>
+          </table>
+        </td>
+        <td>
+          <table cellspacing="10">
+            <tr>
+              <td>iOS Development</td>
+              <td>*****</td>
+            </tr>
+            <tr>
+              <td>Web Development</td>
+              <td>****</td>
+            </tr>
+
+            <tr>
+              <td>Photography</td>
+              <td>**</td>
+            </tr>
+            <tr>
+              <td>Programmings</td>
+              <td>*</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+    <hr />
+    <a href="pages/hobbies.html">My Hobbies</a>
+    <a href="pages/contact.html">Contact Me</a>
+    <a href="pages/resources.html">Resources Me</a>
+  </body>
 </html>
