--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 
         <tr>
           <td>2010</td>
-          <td>
-            Researcher at The Institute of Cognitive Neurosciences
-          </td>
+          <td>Researcher at The Institute of Cognitive Neurosciences</td>
         </tr>
       </tbody>
       <tfoot></tfoot>
@@ -115,5 +113,8 @@
     <a href="pages/hobbies.html">My Hobbies</a>
     <a href="pages/contact.html">Contact Me</a>
     <a href="pages/resources.html">Resources Me</a>
+    <a href="https://igmrrf.com" target="_blank" rel="noreferer noopener"
+      >Portfolio</a
+    >
   </body>
 </html>
